
enable_language(ASM)

if(NOT TARGET avutil)
    add_subdirectory(
		${CMAKE_CURRENT_SOURCE_DIR}/../libavutil
		${CMAKE_CURRENT_BINARY_DIR}/libavutil
	)
endif()

set(AVCODEC_SRC
    012v.c
    4xm.c
    8bps.c
    8svx.c
    a64multienc.c
    aacadtsdec.c
    aaccoder.c
    aacdec.c
    aacenc.c
    aacps.c
    aacpsdata.c
    aacpsdsp.c
    aacpsy.c
    aacps_tablegen.c
    aacsbr.c
    aactab.c
    aac_ac3_parser.c
    aac_adtstoasc_bsf.c
    aac_parser.c
    aac_tablegen.c
    aandcttab.c
    aasc.c
    ac3.c
    ac3dec.c
    ac3dec_data.c
    ac3dsp.c
    ac3enc.c
    ac3enc_fixed.c
    ac3enc_float.c
    ac3tab.c
    ac3_parser.c
    acelp_filters.c
    acelp_pitch_delay.c
    acelp_vectors.c
    adpcm.c
    adpcmenc.c
    adpcm_data.c
    adx.c
    adxdec.c
    adxenc.c
    adx_parser.c
    aic.c
    alac.c
    alacenc.c
    alac_data.c
    aliaspixdec.c
    aliaspixenc.c
    allcodecs.c
    alsdec.c
    amrnbdec.c
    amrwbdec.c
    anm.c
    ansi.c
    apedec.c
    ass.c
    assdec.c
    assenc.c
    ass_split.c
    asv.c
    asvdec.c
    asvenc.c
    atrac.c
    atrac1.c
    atrac3.c
    atrac3plus.c
    atrac3plusdec.c
    atrac3plusdsp.c
    audioconvert.c
    audio_frame_queue.c
    aura.c
    avfft.c
    avpacket.c
    avpicture.c
    avrndec.c
    avs.c
    avuidec.c
    avuienc.c
    bethsoftvideo.c
    bfi.c
    bgmc.c
    bink.c
    binkaudio.c
    binkdsp.c
    bintext.c
    bitstream.c
    bitstream_filter.c
    bmp.c
    bmpenc.c
    bmp_parser.c
    bmv.c
    brender_pix.c
    c93.c
    cabac.c
    cavs.c
    cavsdata.c
    cavsdec.c
    cavsdsp.c
    cavs_parser.c
    cbrt_tablegen.c
    cdgraphics.c
    cdxl.c
    celp_filters.c
    celp_math.c
    cga_data.c
    chomp_bsf.c
    cinepak.c
    cinepakenc.c
    cljr.c
    cllc.c
    cngdec.c
    cngenc.c
    codec_desc.c
    cook.c
    cook_parser.c
    cos_tablegen.c
    cpia.c
    cscd.c
    cyuv.c
    dca.c
    dcadec.c
    dcadsp.c
    dcaenc.c
    dca_parser.c
    dct-test.c
    dct.c
    dct32_fixed.c
    dct32_float.c
    dct32_template.c
    dctref.c
    dfa.c
    dirac.c
    diracdec.c
    diracdsp.c
    dirac_arith.c
    dirac_dwt.c
    dirac_parser.c
    dnxhddata.c
    dnxhddec.c
    dnxhdenc.c
    dnxhd_parser.c
    dpcm.c
    dpx.c
    dpxenc.c
    dpx_parser.c
    dsicinav.c
    dsputil.c
    dump_extradata_bsf.c
    dv.c
    dvbsub.c
    dvbsubdec.c
    dvbsub_parser.c
    dvdata.c
    dvdec.c
    dvdsubdec.c
    dvdsubenc.c
    dvdsub_parser.c
    dvd_nav_parser.c
    dvenc.c
    dv_profile.c
    dv_tablegen.c
    dxtory.c
    eac3dec.c
    eac3enc.c
    eac3_data.c
    eacmv.c
    eaidct.c
    eamad.c
    eatgq.c
    eatgv.c
    eatqi.c
    elbg.c
    error_resilience.c
    escape124.c
    escape130.c
    evrcdec.c
    exif.c
    faandct.c
    faanidct.c
    faxcompr.c
    fft-fixed-test.c
    fft-fixed32-test.c
    fft_fixed.c
    fft_fixed_32.c
    fft_float.c
    ffv1.c
    ffv1dec.c
    ffv1enc.c
    ffwavesynth.c
    fic.c
    file_open.c
    flac.c
    flacdata.c
    flacdec.c
    flacdsp.c
    flacenc.c
    flac_parser.c
    flicvideo.c
    flvdec.c
    flvenc.c
    fmtconvert.c
    frame_thread_encoder.c
    fraps.c
    frwu.c
    g722.c
    g722dec.c
    g722enc.c
    g723_1.c
    g726.c
    g729dec.c
    g729postfilter.c
    gif.c
    gifdec.c
    golomb-test.c
    golomb.c
    gsmdec.c
    gsmdec_data.c
    gsmdec_template.c
    gsm_parser.c
    h261.c
    h261data.c
    h261dec.c
    h261enc.c
    h261_parser.c
    h263.c
    h263dec.c
    h263dsp.c
    h263_parser.c
    h264.c
    h264chroma.c
    h264dsp.c
    h264idct.c
    h264pred.c
    h264qpel.c
    h264_cabac.c
    h264_cavlc.c
    h264_direct.c
    h264_loopfilter.c
    h264_mb.c
    h264_mp4toannexb_bsf.c
    h264_parser.c
    h264_picture.c
    h264_ps.c
    h264_refs.c
    h264_sei.c
    h264_slice.c
    hevc.c
    hevcdsp.c
    hevcpred.c
    hevc_cabac.c
    hevc_filter.c
    hevc_mvs.c
    hevc_parser.c
    hevc_ps.c
    hevc_refs.c
    hevc_sei.c
    hnm4video.c
    hpeldsp.c
    hpel_template.c
    huffman.c
    huffyuv.c
    huffyuvdec.c
    huffyuvenc.c
    idcinvideo.c
    iff.c
    iirfilter.c
    imc.c
    imgconvert.c
    imx_dump_header_bsf.c
    indeo2.c
    indeo3.c
    indeo4.c
    indeo5.c
    intelh263dec.c
    interplayvideo.c
    intrax8.c
    intrax8dsp.c
    ituh263dec.c
    ituh263enc.c
    ivi_common.c
    ivi_dsp.c
    j2kenc.c
    jacosubdec.c
    jfdctfst.c
    jfdctint.c
    jfdctint_template.c
    jpeg2000.c
    jpeg2000dec.c
    jpeg2000dwt.c
    jpegls.c
    jpeglsdec.c
    jpeglsenc.c
    jrevdct.c
    jvdec.c
    kbdwin.c
    kgv1dec.c
    kmvc.c
    lagarith.c
    lagarithrac.c
    latm_parser.c
    lcldec.c
    libopencore-amr.c
    ljpegenc.c
    loco.c
    log2_tab.c
    lossless_videodsp.c
    lpc.c
    lsp.c
    lzw.c
    lzwenc.c
    mace.c
    mathtables.c
    mdct_fixed.c
    mdct_fixed_32.c
    mdct_float.c
    mdct_template.c
    mdec.c
    metasound.c
    metasound_data.c
    microdvddec.c
    mimic.c
    mjpeg.c
    mjpeg2jpeg_bsf.c
    mjpega_dump_header_bsf.c
    mjpegbdec.c
    mjpegdec.c
    mjpegenc.c
    mjpeg_parser.c
    mlp.c
    mlpdec.c
    mlpdsp.c
    mlp_parser.c
    mmvideo.c
    motion-test.c
    motionpixels.c
    motionpixels_tablegen.c
    motion_est.c
    movsub_bsf.c
    movtextdec.c
    movtextenc.c
    mp3_header_decompress_bsf.c
    mpc.c
    mpc7.c
    mpc8.c
    mpeg12.c
    mpeg12data.c
    mpeg12dec.c
    mpeg12enc.c
    mpeg4audio.c
    mpeg4video.c
    mpeg4videodec.c
    mpeg4videoenc.c
    mpeg4video_parser.c
    mpegaudio.c
    mpegaudiodata.c
    mpegaudiodecheader.c
    mpegaudiodec_fixed.c
    mpegaudiodec_float.c
    mpegaudiodsp.c
    mpegaudiodsp_data.c
    mpegaudiodsp_fixed.c
    mpegaudiodsp_float.c
    mpegaudioenc_fixed.c
    mpegaudioenc_float.c
    mpegaudio_parser.c
    mpegaudio_tablegen.c
    mpegutils.c
    mpegvideo.c
    mpegvideo_enc.c
    mpegvideo_motion.c
    mpegvideo_parser.c
    mpl2dec.c
    mqc.c
    mqcdec.c
    mqcenc.c
    msgsmdec.c
    msmpeg4.c
    msmpeg4data.c
    msmpeg4dec.c
    msmpeg4enc.c
    msrle.c
    msrledec.c
    mss1.c
    mss12.c
    mss2.c
    mss2dsp.c
    mss3.c
    mss34dsp.c
    mss4.c
    msvideo1.c
    msvideo1enc.c
    mvcdec.c
    mxpegdec.c
    nellymoser.c
    nellymoserdec.c
    nellymoserenc.c
    noise_bsf.c
    nuv.c
    options.c
    paf.c
    pamenc.c
    parser.c
    pcm-bluray.c
    pcm-dvd.c
    pcm.c
    pcm_tablegen.c
    pcx.c
    pcxenc.c
    pgssubdec.c
    pictordec.c
    png.c
    pngdsp.c
    png_parser.c
    pnm.c
    pnmdec.c
    pnmenc.c
    pnm_parser.c
    proresdata.c
    proresdec2.c
    proresdec_lgpl.c
    proresdsp.c
    proresenc_anatoliy.c
    proresenc_kostya.c
    psymodel.c
    pthread.c
    pthread_frame.c
    pthread_slice.c
    ptx.c
    qcelpdec.c
    qdm2.c
    qdm2_tablegen.c
    qdrw.c
    qpeg.c
    qtrle.c
    qtrleenc.c
    r210dec.c
    r210enc.c
    ra144.c
    ra144dec.c
    ra144enc.c
    ra288.c
    ralf.c
    rangecoder.c
    ratecontrol.c
    raw.c
    rawdec.c
    rawenc.c
    rdft.c
    realtextdec.c
    remove_extradata_bsf.c
    resample.c
    resample2.c
    rl2.c
    rle.c
    roqaudioenc.c
    roqvideo.c
    roqvideodec.c
    roqvideoenc.c
    rpza.c
    rtjpeg.c
    rv10.c
    rv10enc.c
    rv20enc.c
    rv30.c
    rv30dsp.c
    rv34.c
    rv34dsp.c
    rv34_parser.c
    rv40.c
    rv40dsp.c
    s302m.c
    s302menc.c
    s3tc.c
    samidec.c
    sanm.c
    sbrdsp.c
    sgidec.c
    sgienc.c
    sgirledec.c
    shorten.c
    simple_idct.c
    sinewin.c
    sinewin_tablegen.c
    sipr.c
    sipr16k.c
    smacker.c
    smc.c
    smvjpegdec.c
    snow.c
    snowdec.c
    snowenc.c
    snow_dwt.c
    sonic.c
    sp5xdec.c
    srtdec.c
    srtenc.c
    subviewerdec.c
    sunrast.c
    sunrastenc.c
    svq1.c
    svq13.c
    svq1dec.c
    svq1enc.c
    svq3.c
    synth_filter.c
    tak.c
    takdec.c
    tak_parser.c
    targa.c
    targaenc.c
    targa_y216dec.c
    textdec.c
    tiertexseqv.c
    tiff.c
    tiffenc.c
    tiff_common.c
    tiff_data.c
    tmv.c
    tpeldsp.c
    tpel_template.c
    truemotion1.c
    truemotion2.c
    truespeech.c
    tta.c
    ttadata.c
    ttadsp.c
    ttaenc.c
    twinvq.c
    twinvqdec.c
    txd.c
    ulti.c
    utils.c
    utvideo.c
    utvideodec.c
    utvideoenc.c
    v210dec.c
    v210enc.c
    v210x.c
    v308dec.c
    v308enc.c
    v408dec.c
    v408enc.c
    v410dec.c
    v410enc.c
    vb.c
    vble.c
    vc1.c
    vc1data.c
    vc1dec.c
    vc1dsp.c
    vc1_parser.c
    vcr1.c
    videodsp.c
    vima.c
    vmdav.c
    vmnc.c
    vorbis.c
    vorbisdec.c
    vorbisdsp.c
    vorbisenc.c
    vorbis_data.c
    vorbis_parser.c
    vp3.c
    vp3dsp.c
    vp3_parser.c
    vp5.c
    vp56.c
    vp56data.c
    vp56dsp.c
    vp56rac.c
    vp6.c
    vp6dsp.c
    vp8.c
    vp8dsp.c
    vp8_parser.c
    vp9.c
    vp9dsp.c
    vp9_parser.c
    vqavideo.c
    wavpack.c
    wavpackenc.c
    webp.c
    webvttdec.c
    wma.c
    wmadec.c
    wmaenc.c
    wmalosslessdec.c
    wmaprodec.c
    wmavoice.c
    wma_common.c
    wmv2.c
    wmv2dec.c
    wmv2dsp.c
    wmv2enc.c
    wnv1.c
    ws-snd1.c
    x86/ac3dsp_init.c
    x86/ac3dsp.asm
    x86/constants.c
    x86/dcadsp_init.c
    x86/dcadsp.asm
    x86/dct_init.c
    x86/dct32.asm
    x86/deinterlace.asm
    x86/diracdsp_mmx.c
    x86/diracdsp_yasm.asm
    x86/dwt_yasm.asm
    x86/dirac_dwt_x86.c
    x86/dsputilenc_mmx.c
    x86/dsputil_init.c
    x86/dsputil.asm
    x86/dsputil_x86.c
    x86/fdct.c
    x86/fft_init.c
    x86/fft.asm
    x86/flacdsp_init.c
    x86/flacdsp.asm
    x86/fmtconvert_init.c
    x86/fmtconvert.asm
    x86/fpel_mmx.c
    x86/fpel.asm
    x86/dsputil_mmx.c
    x86/fpel.asm
    x86/mpeg4qpel.asm
    x86/qpel.asm
    x86/h263dsp_init.c
    x86/h263_loopfilter.asm
    x86/h264chroma_init.c
    x86/h264_chromamc.asm
    x86/h264_chromamc_10bit.asm
    x86/h264dsp_init.c
    x86/h264_deblock.asm
    x86/h264_deblock_10bit.asm
    x86/h264_idct.asm
    x86/h264_idct_10bit.asm
    x86/h264_weight.asm
    x86/h264_weight_10bit.asm
    x86/h264_intrapred_init.c
    x86/h264_intrapred.asm
    x86/h264_intrapred_10bit.asm
    x86/h264_qpel.c
    x86/h264_qpel_8bit.asm
    x86/h264_qpel_10bit.asm
    x86/hpeldsp_init.c
    x86/hpeldsp.asm
    x86/hpeldsp_mmx.c
    x86/idct_mmx_xvid.c
    x86/idct_sse2_xvid.c
    x86/lossless_videodsp_init.c
    x86/mlpdsp_x86.c
    x86/pngdsp_init.c
    x86/pngdsp.asm
    x86/proresdsp_init.c
    x86/proresdsp.asm
    x86/rv34dsp_init.c
    x86/rv34dsp.asm
    x86/rv40dsp_init.c
    x86/rv40dsp.asm
    x86/sbrdsp_init.c
    x86/sbrdsp.asm
    x86/simple_idct_x86.c
    x86/snowdsp.c
    x86/ttadsp_init.c
    x86/ttadsp.asm
    x86/v210-init.c
    x86/v210.asm
    x86/vc1dsp_init.c
    x86/vc1dsp.asm
    x86/vc1dsp_mmx.c
    x86/videodsp_init.c
    x86/videodsp.asm
    x86/vorbisdsp_init.c
    x86/vorbisdsp.asm
    x86/vp3dsp_init.c
    x86/vp3dsp.asm
    x86/vp6dsp_init.c
    x86/vp6dsp.asm
    x86/vp8dsp_init.c
    x86/vp8dsp.asm
    x86/vp8dsp_loopfilter.asm
    x86/vp9dsp_init.c
    x86/vp9intrapred.asm
    x86/vp9itxfm.asm
    x86/vp9lpf.asm
    x86/vp9mc.asm
    x86/w64xmmtest.c
    x86/lossless_videodsp.asm
    x86/lpc.c
    x86/mpegvideo.c
    x86/mpegvideoenc.c
    x86/mpegaudiodsp.c
    x86/imdct36.asm
    x86/cavsdsp.c
    xan.c
    xbmdec.c
    xbmenc.c
    xface.c
    xfacedec.c
    xfaceenc.c
    xiph.c
    xl.c
    xsubdec.c
    xsubenc.c
    xwddec.c
    xwdenc.c
    xxan.c
    y41pdec.c
    y41penc.c
    yop.c
    yuv4dec.c
    yuv4enc.c
)
set(CMAKE_ASM_COMPILE_OBJECT "<CMAKE_ASM_COMPILER> -f elf64 -m amd64 <INCLUDES> -o <OBJECT> -P ../../../../../../../../${CMAKE_CURRENT_SOURCE_DIR}/config.asm <SOURCE>"  CACHE STRING "" FORCE)

add_library(avcodec STATIC ${AVCODEC_SRC})
target_link_libraries(avcodec PUBLIC avutil PS4LIBS ScePosix_stub_weak)
target_include_directories(avcodec SYSTEM BEFORE PUBLIC ${__PS4_INCLUDES__} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_CURRENT_SOURCE_DIR}/..)
target_compile_options(avcodec PRIVATE "-include ../../../../../../../../${CMAKE_CURRENT_SOURCE_DIR}/../libavutil/internal.h" "-include ../../../../../../../../${CMAKE_CURRENT_SOURCE_DIR}/../config.h" "-include ../../../../../../../../${CMAKE_CURRENT_SOURCE_DIR}/../libavutil/orbis/misc_kernel.h")

